--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "nodemon server.js",
+    "deploy": "aws s3 sync build/ s3://webtalent/",
     "client-install": "npm install --prefix client",
     "client": "npm start --prefix client",
     "build": "react-scripts build && gulp licenses",
