--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bcryptjs": "^2.4.3",
     "bitly": "^7.1.0",
     "classnames": "2.2.6",
+    "cors": "^2.8.5",
     "deepai": "^1.0.15",
     "disqus-react": "^1.0.9",
     "dotenv": "^8.2.0",
     "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
     "history": "4.10.1",
+    "http": "0.0.1-security",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
@@ -29,6 +31,7 @@
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "mysql": "^2.18.1",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
     "npm": "^6.14.7",
@@ -41,6 +44,8 @@
     "react-scripts": "3.4.1",
     "react-slick": "0.26.1",
     "react-swipeable-views": "0.13.9",
+    "recombee-api-client": "^3.0.0",
+    "recombee-js-api-client": "^3.0.0",
     "stripe": "^8.79.0",
     "url": "^0.11.0"
   },
