--- a/package.json
+++ b/package.json
@@ -5,19 +5,33 @@
   "private": true,
   "main": "src/index.js",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.8.0",
     "aws-sdk": "^2.720.0",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "bitly": "^7.1.0",
     "classnames": "2.2.6",
+    "cors": "^2.8.5",
     "deepai": "^1.0.15",
+    "disqus-react": "^1.0.9",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.17.1",
+    "firebase-admin": "^9.0.0",
     "history": "4.10.1",
+    "http": "0.0.1-security",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "2.26.0",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "mysql": "^2.18.1",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
     "npm": "^6.14.7",
@@ -30,6 +44,10 @@
     "react-scripts": "3.4.1",
     "react-slick": "0.26.1",
     "react-swipeable-views": "0.13.9",
+    "recombee-api-client": "^3.0.0",
+    "recombee-js-api-client": "^3.0.0",
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "stripe": "^8.79.0",
     "url": "^0.11.0"
   },
   "proxy": "http://localhost:5000",
@@ -51,7 +69,6 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "nodemon server.js",
-    "deploy": "aws s3 sync build/ s3://webtalent/",
     "client-install": "npm install --prefix client",
     "client": "npm start --prefix client",
     "build": "react-scripts build && gulp licenses",
